# gr4-packet-modem

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  netns-setup  pyproject.toml
.github/workflows/: build.yml  docker-built.yml
apps/: CMakeLists.txt  README.md  packet_receiver_file.cpp  packet_receiver_soapy.cpp  packet_transceiver.cpp  packet_transmitter_pdu.cpp  packet_transmitter_pdu_throttle.cpp  packet_transmitter_sdr.cpp
benchmarks/: CMakeLists.txt  README.md  benchmark_packet_receiver.cpp  benchmark_packet_transceiver.cpp  benchmark_packet_transmitter.cpp  benchmark_packet_transmitter_pdu.cpp  results.md
blocks/: CMakeLists.txt
blocks/include/gnuradio-4.0/packet-modem/: add.hpp  additive_scrambler.hpp  binary_slicer.hpp  burst_shaper.hpp  coarse_frequency_correction.hpp  constellation.hpp  constellation_llr_decoder.hpp  costas_loop.hpp  crc.hpp  crc_append.hpp  crc_check.hpp  endianness.hpp  file_sink.hpp  file_source.hpp  firdes.hpp  glfsr_source.hpp  head.hpp  header_fec_decoder.hpp  header_fec_encoder.hpp  header_formatter.hpp  header_parser.hpp  header_payload_split.hpp  interpolating_fir_filter.hpp  item_strobe.hpp  mapper.hpp  message_debug.hpp  message_debug_stream.hpp  message_strobe.hpp  multiply_packet_len_tag.hpp  noise_source.hpp  null_sink.hpp  null_source.hpp  pack_bits.hpp  packet_counter.hpp  packet_ingress.hpp  packet_limiter.hpp  packet_mux.hpp  packet_receiver.hpp  packet_strobe.hpp  packet_to_stream.hpp  (+32 more)
cmake/Modules/: FindZeroMQ.cmake
docker/: Dockerfile  Dockerfile.built  pmtv-meson.patch
docs/: docker.md  netns.md
examples/: CMakeLists.txt  benchmark_packet_receiver.cpp  benchmark_syncword_detection.cpp  buffer_size.cpp  burst_shaper.cpp  circbuffer_bug.cpp  crc.cpp  crc_append_missing_tags.cpp  crc_check.cpp  done_msg_sink.cpp  head.cpp  header_formatter.cpp  messages.cpp  minimal_flowgraph.cpp  multithreaded_test.cpp  multithreaded_test2.cpp  pack_bits.cpp  packet_ingress.cpp  packet_mux_benchmark.cpp  packet_receiver_soapy.cpp  packet_strobe.cpp  packet_to_stream.cpp  packet_transceiver.cpp  packet_transmitter.cpp  packet_transmitter_pdu.cpp  packet_transmitter_pdu_throttle.cpp  packet_transmitter_performance.cpp  packet_transmitter_sdr.cpp  pdu_specialization.cpp  pdu_to_tagged_stream.cpp  pfb_arb_resampler.cpp  qpsk_modulator.cpp  stop_flowgraph.cpp  syncword_detection.cpp  tagged_stream_to_pdu.cpp  tags.cpp  test_required_samples.cpp  throttle.cpp  tun.cpp
gr3/flowgraphs/: file_source_gui.grc  file_source_uhd.grc  qpsk_modulator.grc
python/: main.cpp
python/bindings/: main.cpp  python_bindings.cpp  register_add.cpp  register_additive_scrambler.cpp  register_binary_slicer.cpp  register_blocks.cpp  register_burst_shaper.cpp  register_coarse_frequency_correction.cpp  register_constellation_llr_decoder.cpp  register_costas_loop.cpp  register_crc_append.cpp  register_crc_check.cpp  register_file_sink.cpp  register_file_source.cpp  register_glfsr_source.cpp  register_head.cpp  register_header_fec_decoder.cpp  register_header_fec_encoder.cpp  register_header_formatter.cpp  register_header_parser.cpp  register_header_payload_split.cpp  register_helpers.hpp  register_interpolating_fir_filter.cpp  register_item_strobe.cpp  register_mapper.cpp  register_message_debug.cpp  register_message_strobe.cpp  register_multiply_packet_len_tag.cpp  register_noise_source.cpp  register_null_sink.cpp  register_null_source.cpp  register_pack_bits.cpp  register_packet_counter.cpp  register_packet_ingress.cpp  register_packet_limiter.cpp  register_packet_mux.cpp  register_packet_strobe.cpp  register_packet_to_stream.cpp  register_packet_type_filter.cpp  register_payload_metadata_insert.cpp  (+22 more)
python/bindings/gr4_packet_modem/: __init__.py
python/examples/: minimal_flowgraph.py  qpsk_modulator.py
python/gr4_packet_modem/: __init__.py
python/test/: test_bindings.py
scripts/: netns-setup  plot_symbols.py
src/: CMakeLists.txt  head_test.cpp  minimal_flowgraph.cpp  scratch.cpp  tags_example.cpp  vector_source_test.cpp
test/: CMakeLists.txt  firdes.cpp  qa_add.cpp  qa_additive_scrambler.cpp  qa_binary_slicer.cpp  qa_burst_shaper.cpp  qa_coarse_frequency_correction.cpp  qa_constellation_llr_decoder.cpp  qa_costas_loop.cpp  qa_crc.cpp  qa_firdes.cpp  qa_glfsr_source.cpp  qa_head.cpp  qa_header_fec_decoder.cpp  qa_header_fec_encoder.cpp  qa_header_formatter.cpp  qa_header_parser.cpp  qa_header_payload_split.cpp  qa_interpolating_fir_filter.cpp  qa_item_strobe.cpp  qa_loopback.cpp  qa_mapper.cpp  qa_messages.cpp  qa_multiply_packet_len_tag.cpp  qa_noise_source.cpp  qa_null_source_and_sink.cpp  qa_pack_unpack.cpp  qa_packet_ingress.cpp  qa_packet_mux.cpp  qa_packet_strobe.cpp  qa_packet_to_stream.cpp  qa_payload_metadata_insert.cpp  qa_pdu.cpp  qa_pfb_arb_resampler.cpp  qa_probe_rate.cpp  qa_rotator.cpp  qa_stream_to_tagged_stream.cpp  qa_symbol_filter.cpp  qa_syncword_detection.cpp  qa_syncword_detection_filter.cpp  (+5 more)
